infrastructure/configs/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: default
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.f9.casa`)
      kind: Rule
      middlewares:
        - name: authentik
          namespace: authentik
        - name: default-headers
          namespace: default
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: f9-casa-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: cloudflare-plugin
    namespace: traefik
spec:
    plugin:
        traefik-plugin-cloudflare:
            overwriteRequestHeader: "true"
            refreshInterval: 24h
            allowedCIDRs:
            - 10.0.10.0/24
            - 192.168.1.0/24
